cmake_minimum_required(VERSION 3.0.0)
project(week4 VERSION 0.1.0 LANGUAGES C CXX)


set(CMAKE_CXX_STANDARD 20)

# add_executable(matrix_seminars_week4                                   ./seminars/week4/matrix_problem/main.cpp ./seminars//week4/matrix_problem/matrix.h ./seminars//week4/matrix_problem/matrix.cpp)
# add_executable(readfile_seminars_week4                                 ./seminars/week4/readFile_problem/main.cpp)
# add_executable(vector_problem                              ./seminars/week5/vector_problem.cpp)
# add_executable(titanic_problem                              ./seminars/week5/titanic/main.cpp ./seminars/week5/titanic/titanic.cpp ./seminars/week5/titanic/titanic.h)




#contest2

# add_executable(problem4_contest2_similar_sound                         ./contests/contest_2/problem4.cpp)




#contest3

# add_executable(problem1_contest3_countWords                         ./contests/contest_3/problem1_countWords.cpp)
# add_executable(problem5_contest3_splitString                          ./contests/contest_3/problem5_split.cpp)
# add_executable(problem6_contest3_extractDigits                          ./contests/contest_3/problem6_extractDigits.cpp)
# add_executable(problem4_contest3_commonSuffix                          ./contests/contest_3/problem4_commonSuffix.cpp)




#contest5(after mid)

# add_executable(problem3_contest5_complex                          ./contests/contest_5/problem3_complex.cpp)
# add_executable(problem4_contest5_rational                          ./contests/contest_5/problem4_rational.cpp)
add_executable(problem2_contest5_cos_similarity                      ./contests/contest_5/problem2_cos_similarity.cpp)

