cmake_minimum_required(VERSION 3.0.0)
project(week4 VERSION 0.1.0 LANGUAGES C CXX)


set(CMAKE_CXX_STANDARD 20)

# add_executable(matrix_seminars_week4                                   ./seminars/week4/matrix_problem/main.cpp ./seminars//week4/matrix_problem/matrix.h ./seminars//week4/matrix_problem/matrix.cpp)
# add_executable(readfile_seminars_week4                                 ./seminars/week4/readFile_problem/main.cpp)
# add_executable(vector_problem                              ./seminars/week5/vector_problem.cpp)
# add_executable(titanic_problem                              ./seminars/week5/titanic/main.cpp ./seminars/week5/titanic/titanic.cpp ./seminars/week5/titanic/titanic.h)




#contest2

# add_executable(problem4_contest2_similar_sound                         ./contests/contest_2/problem4.cpp)




#contest3

# add_executable(problem1_contest3_countWords                         ./contests/contest_3/problem1_countWords.cpp)
# add_executable(problem5_contest3_splitString                          ./contests/contest_3/problem5_split.cpp)
# add_executable(problem6_contest3_extractDigits                          ./contests/contest_3/problem6_extractDigits.cpp)
# add_executable(problem4_contest3_commonSuffix                          ./contests/contest_3/problem4_commonSuffix.cpp)





#contest5(after mid)

# add_executable(problem3_contest5_complex                          ./contests/contest_5/problem3_complex.cpp)
# add_executable(problem4_contest5_rational                          ./contests/contest_5/problem4_rational.cpp)
# add_executable(problem2_contest5_cos_similarity                      ./contests/contest_5/problem2_cos_similarity.cpp)
# add_executable(problem2_contest5_cos_similarity_v2                      ./contests/contest_5/problem2_cos_v2.cpp)

# add_executable(problem1_contest5_minimum                     ./contests/contest_5/problem1_minimum.cpp)
# add_executable(problem5_contest5_minesweeper                   ./contests/contest_5/problem5_minesweeper.cpp)




# seminars inheritance

# add_executable(inheritance                     ./seminars/week10/inheritance.cpp)
# add_executable(class_person                     ./seminars/week10/main_person.cpp)


# add_executable(custom_vector                    ./seminars/week11/custom_vector/main.cpp   ./seminars/week11/custom_vector/vector.h    ./seminars/week11/custom_vector/vector.cpp)
add_executable(custom_vector                    ./seminars/vector/vector.hpp ./seminars/vector/main.cpp )





# read file escort
# add_executable(read_file_escort                   ./seminars/read_file/main.cpp)



# add_executable(data_ya_co                   ./seminars/yandex_contest_before_mid/data.cpp)
# add_executable(data_ya_co                   ./seminars/yandex_contest_before_mid/set.cpp)
# add_executable(data_ya_co                   ./seminars/yandex_contest_before_mid/set2_alphabet.cpp)
# add_executable(data_ya_co                   ./seminars/yandex_contest_before_mid/professor.cpp)
# add_executable(data_ya_co                   ./seminars/yandex_contest_before_mid/substrings.cpp)

# add_executable(data_ya_co                   ./seminars/yandex_contest_before_mid/vector_3d.cpp)





add_executable(midterm                   ./midterm/p1.cpp)
